--- a/src/client/jsconfig.json
+++ b/src/client/jsconfig.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/jsconfig.json",
+  // prettier-ignore
   "compilerOptions": {
     /* Basic Options */
     "target": "es2016",                             /* Specify ECMAScript target version: 'es3', 'es5', 'es6', 'es2015' (default), 'es2016', 'es2017', 'es2018', 'es2019', 'es2020' or 'esnext'. */
