--- a/src/client/package.json
+++ b/src/client/package.json
@@ -45,6 +45,7 @@
     "@pixi/settings": "6.1.2",
     "@pixi/sprite": "6.1.2",
     "@pixi/ticker": "6.1.2",
+    "@pixi/unsafe-eval": "^6.1.2",
     "@pixi/utils": "6.1.2",
     "babel-eslint": "^10.1.0"
   },
