--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,10 +9,11 @@
     "production": "webpack --mode production --config webpack.production.js",
     "build": "webpack --mode development --config webpack.development.js",
     "start": "webpack serve --config webpack.development.js --https --open",
-    "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}"
+    "prettier-watch": "onchange -i \"src/**/*\" \"*\" -- prettier --write --ignore-unknown {{changed}}"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
