--- a/src/client/babel.config.json
+++ b/src/client/babel.config.json
@@ -1,4 +1,10 @@
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "plugins": [
+    [
+      "@babel/transform-runtime",
+      {
+        "corejs": 3
+      }
+    ]
+  ]
 }
