--- a/src/client/package.json
+++ b/src/client/package.json
@@ -6,21 +6,23 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "production": "webpack --mode production --config webpack.production.js",
-    "build": "webpack --mode development --config webpack.development.js",
+    "build": "webpack --config webpack.development.js",
+    "production": "webpack --config webpack.production.js",
     "start": "webpack serve --config webpack.development.js --https --open",
-    "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}"
+    "prettier-watch": "onchange -i \"src/**/*\" \"*\" -- prettier --write --ignore-unknown {{changed}}",
+    "bundle-report": "webpack --config webpack.production.js --profile --json > reports/stats.json && webpack-bundle-analyzer reports/stats.json"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/runtime-corejs3": "^7.15.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-no-for-of-loops": "^1.0.1",
     "eslint-plugin-no-function-declare-after-return": "^1.1.0",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-webpack-plugin": "^3.0.1",
@@ -29,6 +31,7 @@
     "onchange": "^7.1.0",
     "prettier": "2.3.2",
     "webpack": "^5.49.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
@@ -45,9 +48,8 @@
     "@pixi/settings": "6.1.2",
     "@pixi/sprite": "6.1.2",
     "@pixi/ticker": "6.1.2",
-    "@pixi/unsafe-eval": "^6.1.2",
-    "@pixi/utils": "6.1.2",
-    "babel-eslint": "^10.1.0"
+    "@pixi/unsafe-eval": "6.1.2",
+    "@pixi/utils": "6.1.2"
   },
   "-vs-binding": {
     "BeforeBuild": [
