Gave version 0.3.0 - type: module - browserslist - IE 11 support - Microsoft.VisualStudio.JavaScript.Sdk/0.2.0-alpha - remove sideEffects: false from node_modules - split chunks

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# editorconfig.org
+# https://editorconfig.org
 
 [*]
 charset = utf-8
@@ -9,7 +9,7 @@ trim_trailing_whitespace = true
 
 [*.cs]
 
-[*.js]
+[*.js, *.cjs, *.mjs]
 indent_size = 2
 
 [*.{html,css}]
