--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,13 @@
 version: 2
+
 updates: 
+  - package-ecosystem: "nuget"
+    directory: "/src/api"
+    schedule:
+      interval: "daily"
+      time: "12:00"
+      timezone: "Europe/Stockholm"
+
   - package-ecosystem: "npm"
     directory: "/src/client"
     schedule:
