--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -8,10 +8,17 @@ on:
     types: [opened, synchronize, reopened, closed]
     branches:
       - main
+  pull_request_target:
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - main
 
 jobs:
   build_and_deploy_job:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+    if: >
+      github.event_name == 'push'
+      || (github.event.action != 'closed' && github.event_name == 'pull_request' && github.actor != 'dependabot[bot]')
+      || (github.event.action != 'closed' && github.event_name == 'pull_request_target' && github.actor == 'dependabot[bot]') 
     runs-on: ubuntu-latest
     name: Build and Deploy Job
     steps:
@@ -31,7 +38,9 @@ jobs:
           app_build_command: "npm run production"
 
   close_pull_request_job:
-    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    if: >
+      (github.event.action == 'closed' && github.event_name == 'pull_request' && github.actor != 'dependabot[bot]')
+      || (github.event.action == 'closed' && github.event_name == 'pull_request_target' && github.actor == 'dependabot[bot]')
     runs-on: ubuntu-latest
     name: Close Pull Request Job
     steps:
