--- a/src/client/jsconfig.json
+++ b/src/client/jsconfig.json
@@ -11,7 +11,8 @@
     "module": "es2015",         /* Specify module code generation: 'none', 'commonJS', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'esnext'. */
     "checkJs": true,            /* Report errors in .js files. */
     "strict": true,             /* Enable all strict type-checking options. Equivalent to enabling all of the strict mode options. */
-    "moduleResolution": "node"  /* Specify module resolution strategy: 'node' (Node) or 'classic' (TypeScript pre 1.6). */
+    "moduleResolution": "node", /* Specify module resolution strategy: 'node' (Node) or 'classic' (TypeScript pre 1.6). */
+    "rootDir": "src"            /* Specifies the root directory of input files. */
   },
   "typingOptions": {
     "enableAutoDiscovery": true
