--- a/src/client/jsconfig.json
+++ b/src/client/jsconfig.json
@@ -1,21 +1,22 @@
-/*
- * Uses JavaScript Language Service (Salsa): https://github.com/microsoft/TypeScript/wiki/JavaScript-Language-Service-in-Visual-Studio
- * IntelliSense based on JSDoc: https://github.com/microsoft/TypeScript/wiki/JSDoc-support-in-JavaScript/a9f5313810385ed9f6b0b5172d9a4f1f145158da
- * Config reference: https://www.typescriptlang.org/tsconfig
- */
 {
+  /*
+   * Uses JavaScript Language Service (Salsa): https://github.com/microsoft/TypeScript/wiki/JavaScript-Language-Service-in-Visual-Studio
+   * IntelliSense based on JSDoc: https://github.com/microsoft/TypeScript/wiki/JSDoc-support-in-JavaScript/a9f5313810385ed9f6b0b5172d9a4f1f145158da
+   * Config reference: https://www.typescriptlang.org/tsconfig
+   */
   "$schema": "https://json.schemastore.org/jsconfig.json",
   // prettier-ignore
   "compilerOptions": {
-    "target": "es2016",         /* Specify ECMAScript target version: 'es3', 'es5', 'es6', 'es2015' (default), 'es2016', 'es2017', 'es2018', 'es2019', 'es2020' or 'esnext'. */
-    "module": "es2015",         /* Specify module code generation: 'none', 'commonJS', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'esnext'. */
-    "checkJs": true,            /* Report errors in .js files. */
-    "strict": true,             /* Enable all strict type-checking options. Equivalent to enabling all of the strict mode options. */
+    "target": "es2016",         /* Specify the JavaScript language version for emitted JavaScript: 'es3', 'es5', 'es6', 'es2015' (default), 'es2016', 'es2017', 'es2018', 'es2019', 'es2020' or 'esnext'. */
+    "module": "es2015",         /* Specify what module code is generated: 'none', 'commonJS', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'esnext'. */
+    "checkJs": true,            /* Enable error reporting in type-checked JavaScript files. */
+    "strict": true,             /* Enable all strict type checking options. Equivalent to enabling all of the strict mode options. */
     "moduleResolution": "node", /* Specify module resolution strategy: 'node' (Node) or 'classic' (TypeScript pre 1.6). */
-    "rootDir": "src"            /* Specifies the root directory of input files. */
+    "outDir": "dist",           /* Specifies an output folder for all emited files. */
+    "rootDir": "src"            /* Specifies the root folder within your source files. */
   },
-  "typingOptions": {
-    "enableAutoDiscovery": true
+  "typeAcquisition": {
+    "enable": true // Enable auto type acquisition (.d.ts).
   },
   "include": [
     "src/**/*",
