--- a/src/client/package.json
+++ b/src/client/package.json
@@ -15,27 +15,27 @@
     "browserslist": "browserslist"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/eslint-parser": "^7.16.3",
-    "@babel/preset-env": "^7.15.4",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^10.0.0",
-    "css-loader": "^6.2.0",
-    "css-minimizer-webpack-plugin": "^3.0.2",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-compat": "^4.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-webpack-plugin": "^3.0.1",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.2.0",
-    "onchange": "^7.1.0",
+    "@babel/core": "7.16.7",
+    "@babel/eslint-parser": "7.16.5",
+    "@babel/preset-env": "7.16.7",
+    "babel-loader": "8.2.3",
+    "copy-webpack-plugin": "10.2.0",
+    "css-loader": "6.5.1",
+    "css-minimizer-webpack-plugin": "3.3.1",
+    "eslint": "8.6.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-compat": "4.0.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-webpack-plugin": "3.1.1",
+    "html-webpack-plugin": "5.5.0",
+    "mini-css-extract-plugin": "2.4.5",
+    "onchange": "7.1.0",
     "prettier": "2.5.1",
-    "webpack": "^5.49.0",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.2.1",
-    "webpack-merge": "^5.8.0"
+    "webpack": "5.65.0",
+    "webpack-bundle-analyzer": "4.5.0",
+    "webpack-cli": "4.9.1",
+    "webpack-dev-server": "4.7.2",
+    "webpack-merge": "5.8.0"
   },
   "dependencies": {
     "@pixi/app": "6.2.0",
@@ -53,14 +53,6 @@
     "@pixi/unsafe-eval": "6.2.0",
     "@pixi/utils": "6.2.0",
     "core-js": "3.20.2",
-    "unfetch": "^4.2.0"
-  },
-  "-vs-binding": {
-    "BeforeBuild": [
-      "install"
-    ],
-    "AfterBuild": [
-      "build"
-    ]
+    "unfetch": "4.2.0"
   }
 }
