--- a/src/api/local.settings.json
+++ b/src/api/local.settings.json
@@ -2,6 +2,9 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet",
+
+    "APPINSIGHTS_INSTRUMENTATIONKEY": "1ef798fd-96b6-4e8b-a8c0-ea41a23d05b8",
+    "StorageAccount": "<user secret>"
   }
 }
