--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,43 +1,52 @@
 {
   "name": "skystedt.se",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "repository": "https://github.com/skystedt/skystedt.se",
   "author": "skystedt",
   "license": "MIT",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "webpack --config webpack.development.cjs",
-    "production": "webpack --config webpack.production.cjs",
-    "start": "webpack serve --config webpack.development.cjs --https --open",
+    "build": "webpack --config webpack.config.development.cjs",
+    "production": "webpack --config webpack.config.production.cjs",
+    "start": "webpack serve --config webpack.config.development.cjs --open",
     "prettier-watch": "onchange -i \"src/**/*\" \"*\" -- prettier --write --ignore-unknown {{changed}}",
-    "bundle-report": "webpack --config webpack.production.js --profile --json > reports/stats.json && webpack-bundle-analyzer reports/stats.json",
+    "bundle-report": "webpack --config webpack.config.production.cjs --profile --json > reports/stats.json && webpack-bundle-analyzer reports/stats.json",
     "browserslist": "browserslist"
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
     "@babel/eslint-parser": "7.16.5",
-    "@babel/preset-env": "7.16.7",
+    "@babel/preset-env": "7.16.8",
     "babel-loader": "8.2.3",
     "copy-webpack-plugin": "10.2.0",
+    "create-file-webpack": "1.0.2",
+    "csp-html-webpack-plugin": "5.1.0",
     "css-loader": "6.5.1",
-    "css-minimizer-webpack-plugin": "3.3.1",
-    "eslint": "8.6.0",
+    "css-minimizer-webpack-plugin": "3.4.1",
+    "enhanced-resolve": "5.8.3",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-compat": "4.0.1",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsdoc": "37.6.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-webpack-plugin": "3.1.1",
+    "glob": "7.2.0",
     "html-webpack-plugin": "5.5.0",
-    "mini-css-extract-plugin": "2.4.6",
+    "ignore-loader": "0.1.2",
+    "immutability-helper": "3.1.1",
+    "mini-css-extract-plugin": "2.5.2",
+    "minimatch": "3.0.4",
     "onchange": "7.1.0",
     "prettier": "2.5.1",
-    "webpack": "5.65.0",
+    "webpack": "5.66.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.9.1",
-    "webpack-dev-server": "4.7.2",
-    "webpack-merge": "5.8.0"
+    "webpack-dev-server": "4.7.3"
   },
   "dependencies": {
+    "@microsoft/applicationinsights-web": "2.7.2",
     "@pixi/app": "6.2.1",
     "@pixi/constants": "6.2.1",
     "@pixi/core": "6.2.1",
@@ -52,7 +61,8 @@
     "@pixi/ticker": "6.2.1",
     "@pixi/unsafe-eval": "6.2.1",
     "@pixi/utils": "6.2.1",
-    "core-js": "3.20.2",
+    "core-js": "3.20.3",
+    "tslib": "2.3.1",
     "unfetch": "4.2.0"
   }
 }
