--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,3 +23,14 @@ updates:
       time: "17:00"
       timezone: "Europe/Stockholm"
     open-pull-requests-limit: 100
+    ignore:
+      - dependency-name: "*webpack*"
+        update-types: ["version-update:semver-patch"]
+      - dependency-name: "*loader*"
+        update-types: ["version-update:semver-patch"]
+      - dependency-name: "*plugin*"
+        update-types: ["version-update:semver-patch"]
+      - dependency-name: "*babel*"
+        update-types: ["version-update:semver-patch"]
+      - dependency-name: "*eslint*"
+        update-types: ["version-update:semver-patch"]
