Game version v0.5.5 - Disallow console logging

--- a/src/client/.eslintrc.json
+++ b/src/client/.eslintrc.json
@@ -20,6 +20,7 @@
   "rules": {
     "curly": ["error", "all"],
     "no-var": "error",
+    "no-console": ["error", { "allow": ["warn", "error"] }],
     "import/extensions": ["error", "always"],
     "compat/compat": "warn",
     "jsdoc/valid-types": "off",
