--- a/src/client/package.json
+++ b/src/client/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-webpack-plugin": "3.2.0",
     "glob": "8.0.3",
+    "html-inline-css-webpack-plugin": "1.11.1",
     "html-webpack-plugin": "5.5.0",
     "ignore-loader": "0.1.2",
     "immutability-helper": "3.1.1",
