--- a/src/client/package.json
+++ b/src/client/package.json
@@ -14,9 +14,9 @@
     "browserslist": "browserslist"
   },
   "devDependencies": {
-    "@babel/core": "7.18.6",
-    "@babel/eslint-parser": "7.18.2",
-    "@babel/preset-env": "7.18.6",
+    "@babel/core": "7.18.9",
+    "@babel/eslint-parser": "7.18.9",
+    "@babel/preset-env": "7.18.9",
     "babel-loader": "8.2.5",
     "copy-webpack-plugin": "11.0.0",
     "create-file-webpack": "1.0.2",
@@ -24,7 +24,7 @@
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "4.0.0",
     "enhanced-resolve": "5.10.0",
-    "eslint": "8.19.0",
+    "eslint": "8.20.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-compat": "4.0.2",
     "eslint-plugin-import": "2.26.0",
@@ -39,7 +39,15 @@
     "mini-css-extract-plugin": "2.6.1",
     "minimatch": "5.1.0",
     "onchange": "7.1.0",
+    "postcss": "8.4.14",
+    "postcss-loader": "7.0.1",
+    "postcss-merge-rules": "5.1.2",
+    "postcss-preset-env": "7.7.2",
     "prettier": "2.7.1",
+    "stylelint": "14.9.1",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-standard": "26.0.0",
+    "stylelint-webpack-plugin": "3.3.0",
     "webpack": "5.73.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.10.0",
