--- a/src/client/package.json
+++ b/src/client/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-compat": "4.0.2",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsdoc": "39.3.3",
+    "eslint-plugin-no-unsanitized": "4.0.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-webpack-plugin": "3.2.0",
     "glob": "8.0.3",
