--- a/src/client/package.json
+++ b/src/client/package.json
@@ -19,7 +19,6 @@
     "@babel/preset-env": "7.18.9",
     "babel-loader": "8.2.5",
     "copy-webpack-plugin": "11.0.0",
-    "create-file-webpack": "1.0.2",
     "csp-html-webpack-plugin": "5.1.0",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "4.0.0",
@@ -52,7 +51,9 @@
     "webpack": "5.74.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.3"
+    "webpack-dev-server": "4.9.3",
+    "webpack-subresource-integrity": "5.1.0",
+    "tslib": "2.4.0"
   },
   "dependencies": {
     "@microsoft/applicationinsights-web": "2.8.5",
@@ -71,7 +72,6 @@
     "@pixi/unsafe-eval": "6.4.2",
     "@pixi/utils": "6.4.2",
     "core-js": "3.24.1",
-    "tslib": "2.4.0",
     "unfetch": "4.2.0"
   }
 }
