--- a/src/client/staticwebapp.config.template.json
+++ b/src/client/staticwebapp.config.template.json
@@ -7,8 +7,7 @@
       "route": "/",
       "headers": {
         "Content-Security-Policy": "{{placeholder}}",
-        "X-Frame-Options": "DENY",
-        "Permissions-Policy": "fullscreen=(self)"
+        "X-Frame-Options": "DENY"
       }
     },
     {
