--- a/src/client/package.json
+++ b/src/client/package.json
@@ -10,24 +10,23 @@
     "production": "webpack --config webpack.config.production.cjs",
     "start": "webpack serve --config webpack.config.development.cjs --open",
     "prettier-watch": "onchange -i \"src/**/*\" \"*\" -- prettier --write --ignore-unknown {{changed}}",
-    "bundle-report": "webpack --config webpack.config.production.cjs --profile --json > reports/stats.json && webpack-bundle-analyzer reports/stats.json",
-    "browserslist": "browserslist"
+    "browserslist": "browserslist --env=all"
   },
   "devDependencies": {
-    "@babel/core": "7.18.9",
+    "@babel/core": "7.18.10",
     "@babel/eslint-parser": "7.18.9",
-    "@babel/preset-env": "7.18.9",
+    "@babel/preset-env": "7.18.10",
     "babel-loader": "8.2.5",
     "copy-webpack-plugin": "11.0.0",
     "csp-html-webpack-plugin": "5.1.0",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "4.0.0",
     "enhanced-resolve": "5.10.0",
-    "eslint": "8.20.0",
+    "eslint": "8.21.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-compat": "4.0.2",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsdoc": "39.3.3",
+    "eslint-plugin-jsdoc": "39.3.4",
     "eslint-plugin-no-unsanitized": "4.0.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-webpack-plugin": "3.2.0",
@@ -49,7 +48,6 @@
     "stylelint-config-standard": "26.0.0",
     "stylelint-webpack-plugin": "3.3.0",
     "webpack": "5.74.0",
-    "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.9.3",
     "webpack-subresource-integrity": "5.1.0",
