--- a/src/client/package.json
+++ b/src/client/package.json
@@ -55,20 +55,28 @@
   },
   "dependencies": {
     "@microsoft/applicationinsights-web": "2.8.6",
-    "@pixi/app": "6.4.2",
-    "@pixi/constants": "6.4.2",
-    "@pixi/core": "6.4.2",
-    "@pixi/display": "6.4.2",
-    "@pixi/graphics": "6.4.2",
-    "@pixi/loaders": "6.4.2",
-    "@pixi/math": "6.4.2",
-    "@pixi/polyfill": "6.4.2",
-    "@pixi/runner": "6.4.2",
-    "@pixi/settings": "6.4.2",
-    "@pixi/sprite": "6.4.2",
-    "@pixi/ticker": "6.4.2",
-    "@pixi/unsafe-eval": "6.4.2",
-    "@pixi/utils": "6.4.2",
+    "@pixi/app": "6.5.1",
+    "@pixi/assets": "6.5.1",
+    "@pixi/basis": "6.5.1",
+    "@pixi/compressed-textures": "6.5.1",
+    "@pixi/constants": "6.5.1",
+    "@pixi/core": "6.5.1",
+    "@pixi/display": "6.5.1",
+    "@pixi/extensions": "6.5.1",
+    "@pixi/graphics": "6.5.1",
+    "@pixi/loaders": "6.5.1",
+    "@pixi/math": "6.5.1",
+    "@pixi/mesh": "6.5.1",
+    "@pixi/polyfill": "6.5.1",
+    "@pixi/runner": "6.5.1",
+    "@pixi/settings": "6.5.1",
+    "@pixi/sprite": "6.5.1",
+    "@pixi/spritesheet": "6.5.1",
+    "@pixi/text": "6.5.1",
+    "@pixi/text-bitmap": "6.5.1",
+    "@pixi/ticker": "6.5.1",
+    "@pixi/unsafe-eval": "6.5.1",
+    "@pixi/utils": "6.5.1",
     "core-js": "3.24.1",
     "unfetch": "4.2.0"
   }
