--- a/src/api/local.settings.json
+++ b/src/api/local.settings.json
@@ -5,6 +5,7 @@
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
 
     "APPINSIGHTS_INSTRUMENTATIONKEY": "1ef798fd-96b6-4e8b-a8c0-ea41a23d05b8",
-    "StorageAccount": "<secret>"
+    "CosmosTableConnectionString": "<secret>",
+    "WebPubSubConnectionString": "<secret>"
   }
 }
