--- a/src/client/package.json
+++ b/src/client/package.json
@@ -22,11 +22,11 @@
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "4.0.0",
     "enhanced-resolve": "5.10.0",
-    "eslint": "8.21.0",
+    "eslint": "8.22.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-compat": "4.0.2",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsdoc": "39.3.4",
+    "eslint-plugin-jsdoc": "39.3.6",
     "eslint-plugin-no-unsanitized": "4.0.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-webpack-plugin": "3.2.0",
@@ -37,38 +37,39 @@
     "immutability-helper": "3.1.1",
     "mini-css-extract-plugin": "2.6.1",
     "minimatch": "5.1.0",
+    "navigator.sendbeacon": "0.0.20",
     "onchange": "7.1.0",
-    "postcss": "8.4.14",
+    "postcss": "8.4.16",
     "postcss-loader": "7.0.1",
     "postcss-merge-rules": "5.1.2",
     "postcss-preset-env": "7.7.2",
     "prettier": "2.7.1",
-    "stylelint": "14.9.1",
+    "stylelint": "14.10.0",
     "stylelint-config-prettier": "9.0.3",
-    "stylelint-config-standard": "26.0.0",
+    "stylelint-config-standard": "27.0.0",
     "stylelint-webpack-plugin": "3.3.0",
+    "tslib": "2.4.0",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.3",
-    "webpack-subresource-integrity": "5.1.0",
-    "tslib": "2.4.0"
+    "webpack-dev-server": "4.10.0",
+    "webpack-subresource-integrity": "5.1.0"
   },
   "dependencies": {
     "@microsoft/applicationinsights-web": "2.8.6",
-    "@pixi/app": "6.4.2",
-    "@pixi/constants": "6.4.2",
-    "@pixi/core": "6.4.2",
-    "@pixi/display": "6.4.2",
-    "@pixi/graphics": "6.4.2",
-    "@pixi/loaders": "6.4.2",
-    "@pixi/math": "6.4.2",
-    "@pixi/polyfill": "6.4.2",
-    "@pixi/runner": "6.4.2",
-    "@pixi/settings": "6.4.2",
-    "@pixi/sprite": "6.4.2",
-    "@pixi/ticker": "6.4.2",
-    "@pixi/unsafe-eval": "6.4.2",
-    "@pixi/utils": "6.4.2",
+    "@pixi/app": "6.5.1",
+    "@pixi/constants": "6.5.1",
+    "@pixi/core": "6.5.1",
+    "@pixi/display": "6.5.1",
+    "@pixi/extensions": "6.5.1",
+    "@pixi/graphics": "6.5.1",
+    "@pixi/math": "6.5.1",
+    "@pixi/polyfill": "6.5.1",
+    "@pixi/runner": "6.5.1",
+    "@pixi/settings": "6.5.1",
+    "@pixi/sprite": "6.5.1",
+    "@pixi/ticker": "6.5.1",
+    "@pixi/unsafe-eval": "6.5.1",
+    "@pixi/utils": "6.5.1",
     "core-js": "3.24.1",
     "unfetch": "4.2.0"
   }
