--- a/src/client/package.json
+++ b/src/client/package.json
@@ -13,16 +13,24 @@
     "browserslist": "browserslist --env=all"
   },
   "devDependencies": {
-    "@babel/core": "7.18.10",
+    "@babel/core": "7.18.13",
     "@babel/eslint-parser": "7.18.9",
     "@babel/preset-env": "7.18.10",
+    "@pixi/constants": "6.5.2",
+    "@pixi/core": "6.5.2",
+    "@pixi/extensions": "6.5.2",
+    "@pixi/math": "6.5.2",
+    "@pixi/runner": "6.5.2",
+    "@pixi/settings": "6.5.2",
+    "@pixi/ticker": "6.5.2",
+    "@pixi/utils": "6.5.2",
     "babel-loader": "8.2.5",
     "copy-webpack-plugin": "11.0.0",
     "csp-html-webpack-plugin": "5.1.0",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "4.0.0",
     "enhanced-resolve": "5.10.0",
-    "eslint": "8.22.0",
+    "eslint": "8.23.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-compat": "4.0.2",
     "eslint-plugin-import": "2.26.0",
@@ -42,35 +50,23 @@
     "postcss": "8.4.16",
     "postcss-loader": "7.0.1",
     "postcss-merge-rules": "5.1.2",
-    "postcss-preset-env": "7.7.2",
+    "postcss-preset-env": "7.8.0",
     "prettier": "2.7.1",
-    "stylelint": "14.10.0",
+    "stylelint": "14.11.0",
     "stylelint-config-prettier": "9.0.3",
-    "stylelint-config-standard": "27.0.0",
+    "stylelint-config-standard": "28.0.0",
     "stylelint-webpack-plugin": "3.3.0",
     "tslib": "2.4.0",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.10.0",
+    "webpack-dev-server": "4.10.1",
     "webpack-subresource-integrity": "5.1.0"
   },
   "dependencies": {
     "@microsoft/applicationinsights-web": "2.8.6",
-    "@pixi/app": "6.5.1",
-    "@pixi/constants": "6.5.1",
-    "@pixi/core": "6.5.1",
-    "@pixi/display": "6.5.1",
-    "@pixi/extensions": "6.5.1",
-    "@pixi/graphics": "6.5.1",
-    "@pixi/math": "6.5.1",
-    "@pixi/polyfill": "6.5.1",
-    "@pixi/runner": "6.5.1",
-    "@pixi/settings": "6.5.1",
-    "@pixi/sprite": "6.5.1",
-    "@pixi/ticker": "6.5.1",
-    "@pixi/unsafe-eval": "6.5.1",
-    "@pixi/utils": "6.5.1",
-    "core-js": "3.24.1",
+    "@pixi/unsafe-eval": "6.5.2",
+    "core-js": "3.25.0",
+    "pixi.js": "6.5.2",
     "unfetch": "4.2.0"
   }
 }
