--- a/.github/workflows/dependabot-build.yml
+++ b/.github/workflows/dependabot-build.yml
@@ -1,8 +1,8 @@
 name: Dependabot
 
 concurrency: 
-  group: aswa-${{ github.ref }}
-  cancel-in-progress: false
+  group: aswa-dependabot-build-${{ github.ref }}
+  cancel-in-progress: true
 
 on:
   push:
