--- a/.github/workflows/dependabot-close.yml
+++ b/.github/workflows/dependabot-close.yml
@@ -1,8 +1,8 @@
 name: Dependabot
 
 concurrency: 
-  group: aswa-${{ github.ref }}
-  cancel-in-progress: false
+  group: aswa-dependabot-close-${{ github.ref }}
+  cancel-in-progress: true
   
 on:
   pull_request_target:
