--- a/src/client/package.json
+++ b/src/client/package.json
@@ -25,6 +25,7 @@
     "@pixi/ticker": "6.5.2",
     "@pixi/utils": "6.5.2",
     "babel-loader": "8.2.5",
+    "bytes": "3.1.2",
     "copy-webpack-plugin": "11.0.0",
     "csp-html-webpack-plugin": "5.1.0",
     "css-loader": "6.7.1",
