--- a/src/client/package.json
+++ b/src/client/package.json
@@ -13,9 +13,14 @@
     "browserslist": "browserslist --env=all"
   },
   "devDependencies": {
-    "@babel/core": "7.21.0",
-    "@babel/eslint-parser": "7.19.1",
+    "@babel/core": "7.21.3",
+    "@babel/eslint-parser": "7.21.3",
     "@babel/preset-env": "7.20.2",
+    "@pixi/app": "7.2.0",
+    "@pixi/display": "7.2.0",
+    "@pixi/graphics": "7.2.0",
+    "@pixi/sprite": "7.2.0",
+    "@pixi/unsafe-eval": "7.2.0",
     "babel-loader": "9.1.2",
     "bytes": "3.1.2",
     "copy-webpack-plugin": "11.0.0",
@@ -23,20 +28,20 @@
     "css-loader": "6.7.3",
     "css-minimizer-webpack-plugin": "4.2.2",
     "enhanced-resolve": "5.12.0",
-    "eslint": "8.35.0",
-    "eslint-config-prettier": "8.6.0",
+    "eslint": "8.36.0",
+    "eslint-config-prettier": "8.7.0",
     "eslint-plugin-compat": "4.1.2",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsdoc": "40.0.1",
+    "eslint-plugin-jsdoc": "40.0.3",
     "eslint-plugin-no-unsanitized": "4.0.2",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-webpack-plugin": "4.0.0",
-    "glob": "9.2.1",
+    "glob": "9.3.0",
     "html-inline-css-webpack-plugin": "1.11.1",
     "html-webpack-plugin": "5.5.0",
     "ignore-loader": "0.1.2",
     "immutability-helper": "3.1.1",
-    "mini-css-extract-plugin": "2.7.2",
+    "mini-css-extract-plugin": "2.7.3",
     "minimatch": "7.4.2",
     "onchange": "7.1.0",
     "postcss": "8.4.21",
@@ -48,17 +53,16 @@
     "stylelint-config-standard": "30.0.1",
     "stylelint-webpack-plugin": "4.1.0",
     "tslib": "2.5.0",
-    "webpack": "5.75.0",
+    "webpack": "5.76.1",
     "webpack-cli": "5.0.1",
-    "webpack-dev-server": "4.11.1",
+    "webpack-dev-server": "4.12.0",
     "webpack-subresource-integrity": "5.1.0"
   },
   "dependencies": {
-    "@microsoft/applicationinsights-web": "2.8.10",
-    "@pixi/unsafe-eval": "7.0.5",
-    "core-js": "3.29.0",
+    "@microsoft/applicationinsights-web": "2.8.11",
+    "@pixi/core": "7.2.0",
+    "core-js": "3.29.1",
     "navigator.sendbeacon": "0.0.20",
-    "pixi.js": "7.1.4",
     "unfetch": "5.0.0"
   }
 }
