--- a/src/client/package.json
+++ b/src/client/package.json
@@ -13,56 +13,66 @@
     "browserslist": "browserslist --env=all"
   },
   "devDependencies": {
-    "@babel/core": "7.21.3",
-    "@babel/eslint-parser": "7.21.3",
-    "@babel/preset-env": "7.20.2",
-    "@pixi/app": "7.2.0",
-    "@pixi/display": "7.2.0",
-    "@pixi/graphics": "7.2.0",
-    "@pixi/sprite": "7.2.0",
-    "@pixi/unsafe-eval": "7.2.0",
+    "@babel/core": "7.22.5",
+    "@babel/eslint-parser": "7.22.5",
+    "@babel/preset-env": "7.22.5",
     "babel-loader": "9.1.2",
     "bytes": "3.1.2",
     "copy-webpack-plugin": "11.0.0",
     "csp-html-webpack-plugin": "5.1.0",
-    "css-loader": "6.7.3",
-    "css-minimizer-webpack-plugin": "4.2.2",
-    "enhanced-resolve": "5.12.0",
-    "eslint": "8.36.0",
-    "eslint-config-prettier": "8.7.0",
-    "eslint-plugin-compat": "4.1.2",
+    "css-loader": "6.8.1",
+    "css-minimizer-webpack-plugin": "5.0.1",
+    "enhanced-resolve": "5.15.0",
+    "eslint": "8.43.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-compat": "4.1.4",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsdoc": "40.0.3",
+    "eslint-plugin-jsdoc": "46.4.2",
     "eslint-plugin-no-unsanitized": "4.0.2",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-webpack-plugin": "4.0.0",
-    "glob": "9.3.0",
+    "eslint-webpack-plugin": "4.0.1",
+    "glob": "10.3.1",
     "html-inline-css-webpack-plugin": "1.11.1",
-    "html-webpack-plugin": "5.5.0",
+    "html-webpack-plugin": "5.5.3",
     "ignore-loader": "0.1.2",
     "immutability-helper": "3.1.1",
-    "mini-css-extract-plugin": "2.7.3",
-    "minimatch": "7.4.2",
+    "mini-css-extract-plugin": "2.7.6",
+    "minimatch": "9.0.2",
     "onchange": "7.1.0",
-    "postcss": "8.4.21",
-    "postcss-loader": "7.0.2",
-    "postcss-merge-rules": "5.1.4",
-    "postcss-preset-env": "8.0.1",
-    "prettier": "2.8.4",
-    "stylelint": "15.2.0",
-    "stylelint-config-standard": "30.0.1",
-    "stylelint-webpack-plugin": "4.1.0",
-    "tslib": "2.5.0",
-    "webpack": "5.76.1",
-    "webpack-cli": "5.0.1",
-    "webpack-dev-server": "4.12.0",
+    "postcss": "8.4.24",
+    "postcss-loader": "7.3.3",
+    "postcss-merge-rules": "6.0.1",
+    "postcss-preset-env": "8.5.1",
+    "prettier": "2.8.8",
+    "stylelint": "15.9.0",
+    "stylelint-config-standard": "33.0.0",
+    "stylelint-webpack-plugin": "4.1.1",
+    "tslib": "2.6.0",
+    "typescript": "5.1.6",
+    "webpack": "5.88.1",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1",
     "webpack-subresource-integrity": "5.1.0"
   },
   "dependencies": {
-    "@microsoft/applicationinsights-web": "2.8.11",
-    "@pixi/core": "7.2.0",
-    "core-js": "3.29.1",
+    "@microsoft/applicationinsights-web": "3.0.2",
+    "@pixi/app": "7.2.4",
+    "@pixi/core": "7.2.4",
+    "@pixi/display": "7.2.4",
+    "@pixi/graphics": "7.2.4",
+    "@pixi/sprite": "7.2.4",
+    "@pixi/unsafe-eval": "7.2.4",
+    "@pixi/utils": "7.2.4",
+    "core-js": "3.31.0",
     "navigator.sendbeacon": "0.0.20",
     "unfetch": "5.0.0"
+  },
+  "resolutions": {
+    "**/@pixi/utils/url": "0.11.0"
+  },
+  "overrides": {
+    "@pixi/utils": {
+      "url": "0.11.0"
+    }
   }
 }
