--- a/src/Client/package.json
+++ b/src/Client/package.json
@@ -9,9 +9,10 @@
     "build": "webpack --config webpack.development.mjs",
     "production": "webpack --config webpack.production.mjs",
     "start": "webpack serve --config webpack.development.mjs --open",
-    "browserslist": "browserslist --env=all"
+    "update-yarn": "yarn set version stable",
+    "ncu": "yarn dlx npm-check-updates"
   },
-  "packageManager": "yarn@3.6.1",
+  "packageManager": "yarn@4.0.0",
   "devDependencies": {
     "@babel/core": "7.23.2",
     "@babel/eslint-parser": "7.22.15",
@@ -27,7 +28,7 @@
     "eslint": "8.52.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-compat": "4.2.0",
-    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-import": "2.29.0",
     "eslint-plugin-jsdoc": "46.8.2",
     "eslint-plugin-no-unsanitized": "4.0.2",
     "eslint-plugin-prettier": "5.0.1",
@@ -54,11 +55,10 @@
     "webpack-subresource-integrity": "5.1.0"
   },
   "peerDependencies": {
-    "tslib": "*",
-    "typescript": ">=1"
+    "tslib": "*"
   },
   "dependencies": {
-    "@microsoft/applicationinsights-web": "3.0.3",
+    "@microsoft/applicationinsights-web": "3.0.4",
     "@pixi/app": "7.3.2",
     "@pixi/core": "7.3.2",
     "@pixi/display": "7.3.2",
