--- a/.github/workflows/build-maintaner.yml
+++ b/.github/workflows/build-maintaner.yml
@@ -1,14 +1,14 @@
-name: Dependabot
+﻿name: Build - Maintainer
 
 concurrency: 
-  group: aswa-dependabot-${{ github.ref }}
+  group: aswa-maintaner-${{ github.ref }}
   cancel-in-progress: false
 
 on:
   push:
     branches:
       - main
-  pull_request_target:
+  pull_request:
     types: [opened, synchronize, reopened]
     branches:
       - main
@@ -16,6 +16,6 @@ on:
 jobs:
   build_and_deploy:
     name: Build
-    if: github.actor == 'dependabot[bot]'
-    uses: ./.github/workflows/azure-static-web-apps-build-and-deploy.yml
+    if: github.actor != 'dependabot[bot]'
+    uses: ./.github/workflows/build-reusable.yml
     secrets: inherit
