--- a/.github/workflows/close-pr-dependabot.yml
+++ b/.github/workflows/close-pr-dependabot.yml
@@ -1,7 +1,7 @@
 ﻿name: Close PR - Dependabot
 
 concurrency: 
-  group: aswa-dependabot-${{ github.ref }}
+  group: close-pr-${{ github.ref }}
   cancel-in-progress: false
   
 on:
