--- a/.github/workflows/close-pr-maintaner.yml
+++ b/.github/workflows/close-pr-maintaner.yml
@@ -1,7 +1,7 @@
 ﻿name: Close PR - Maintaner
 
 concurrency: 
-  group: aswa-maintaner-${{ github.ref }}
+  group: close-pr-${{ github.ref }}
   cancel-in-progress: false
 
 on:
