--- a/.github/workflows/build-dependabot.yml
+++ b/.github/workflows/build-dependabot.yml
@@ -1,7 +1,7 @@
 ﻿name: Build - Dependabot
 
 concurrency: 
-  group: build-${{ github.ref }}
+  group: build-dependabot-${{ github.ref }}
   cancel-in-progress: false
 
 on:
