--- a/.github/workflows/build-maintaner.yml
+++ b/.github/workflows/build-maintaner.yml
@@ -1,7 +1,7 @@
 ﻿name: Build - Maintainer
 
 concurrency: 
-  group: build-${{ github.ref }}
+  group: build-maintaner-${{ github.ref }}
   cancel-in-progress: false
 
 on:
