Github actions permissions

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,6 +7,11 @@ concurrency:
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+    
+permissions:
+  actions: read
+  contents: read
+  pull-requests: write
 
 jobs:
   build_test_and_deploy:
