--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -9,6 +9,10 @@ on:
     branches:
       - main
 
+permissions:
+  actions: read
+  contents: read
+
 jobs:
   build_test_and_deploy:
     name: Build, Test and Deploy
