--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
       timezone: "Europe/Stockholm"
 
   - package-ecosystem: "nuget"
-    directory: "/src/Api"
+    directory: "/src"
     schedule:
       interval: "daily"
       time: "17:00"
